--- a/style.css
+++ b/style.css
@@ -84,3 +84,40 @@ header{
 .banner-text button{
     margin-top: 20px;
 }
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about{
+    padding: 130px;
+    background-color: #fff8f3;
+    margin: 120px 0px;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+    color: #181818;
+}
+.section-desc{
+    text-align: center;
+    font-size: 18px;
+    color: #181818;
+    margin-top: 25px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 45px;
+}
+.about-info{
+    text-align: center;
+}
+.about-info p{
+ font-size: 18px;
+ color: #181818;
+}
+.about-info h4{
+    font-size: 23px;
+    color: #474747;
+}
