--- a/style.css
+++ b/style.css
@@ -44,9 +44,10 @@ nav >ul >li > a {
 }
 header{
     background-color: #fff8f3;
-    background-image: url('./images/header_bg.png');
+    background-image: url('./images/header_bg.png'),url('./images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right,top left;
+    background-size: contain;
 }
 .banner{
     margin: 30px 30px 30px 150px;
